--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,6 @@ html {
   }
 }
 
-::view-transition-new(slideUp) {
-  animation: slide-in 0.5s ease-in-out;
-}
-::view-transition-old(slideUp) {
-  animation: slide-out 0.5s ease-in-out;
-}
-
 .playground {
   position: absolute;
   top: 0.5rem;
@@ -40,20 +33,21 @@ html {
   display: block;
   /* display: none; */
   white-space: pre;
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.9);
   font-family: monospace;
   font-size: 1rem;
-  color: white;
+  color: rgba(255, 255, 255, 0.8);
   padding: 1rem;
   border-radius: 0.5rem;
   transition: right 0.5s ease-in-out;
 
   &:before {
-    content: '⬅️';
+    content: '⏴';
+    color: #777;
     position: absolute;
     top: 5px;
     left: -35px;
-    padding: 0.1rem 0.3rem;
+    padding: 0.1rem 0.5rem;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: inherit;
   }
